Add register a custom anatomic cathegory